css/style.css
/* ... */
.popup_text {
  display: block;
  padding-right: 10px;
  font-size: 13px;
  margin: 10px 0 7px;
  font-family: "OpenSans-Regular", sans-serif;
}

.popup_input {
  display: block;
  box-sizing: border-box;
  width: 100%;
  height: 48px;
  margin-bottom: 31px;
  padding: 0 20px;
  border: 0;
  appearance: none;
  color: rgba(0, 0, 0, 0.54);
  font-family: "OpenSans-Regular", sans-serif;
  background: url(../svg/form-arrows.svg) 96% / 10px no-repeat #f4f7f6;
}

.popup_input:focus {
  outline-style: none;
  border: 1px solid #b59f5b;
}

.popup_radio {
  display: none;
}

.popup_radio:checked ~ .popup_checkbox_text::before {
  background-image: url(../svg/form-circle.svg);
}

.popup_checkbox {
  display: inline-block;
  margin-bottom: 15px;
}

.popup_checkbox_text {
  margin-right: 10px;
  vertical-align: middle;
  font-size: 13px;
  font-family: "OpenSans-Regular", sans-serif;
}

.popup_checkbox_text::before {
  content: "";
  display: inline-block;
  width: 18px;
  height: 18px;
  margin-right: 6px;
  vertical-align: middle;
  background-image: url(../svg/form-empty-circle.svg);
  background-repeat: no-repeat;
  background-position: center center;
  background-size: 18px;
}

.poput_comment {
  display: block;
  box-sizing: border-box;
  width: 100%;
  height: 132px;
  padding: 20px;
  background-color: #f4f7f6;
  border: 0;
  font-size: 13px;
  font-family: "OpenSans-Regular", sans-serif;
  resize: none;
}

.poput_comment:focus {
  outline-style: none;
  border: 1px solid #b59f5b;
}

.popup_submit {
  display: block;
  width: 100%;
  height: 48px;
  border: 0;
  margin: 25px 0 0;
  background-color: #b59f5b;
  cursor: pointer;
}

.popup_submit:hover {
  background-color: #323232;
}

.popup_submit_text {
  font-size: 14px;
  text-transform: uppercase;
  color: #ffffff;
  font-family: "OpenSans-Bold", sans-serif;
}

.popup_close {
  background-color: transparent;
  border: none;
  padding: 0;
  text-indent: -9999px;
  cursor: pointer;
  width: 22px;
  height: 22px;
  font-size: 16px;
  position: absolute;
  top: -28px;
  right: -3px; 
}

.popup_close::before, .popup_close:after {
  content: "";
  background-color: #ffffff;
  position: absolute;
  top: 50%;
  left: 50%;
  width: 22px;
  height: 3px;
}

.popup_close::before {
  transform: translate(-50%, -50%) rotate(45deg);
}

.popup_close:after {
  transform: translate(-50%, -50%) rotate(-45deg);
}

/* Copyrate */

.copyrate {
  max-width: 1170px;
  margin: 66px auto 40px;
  text-align: center;
  font-size: 12px;
  font-family: "OpenSans-Bold", sans-serif;
}

.copyrate_link {
  color: #999999;
  text-decoration: none;
}

/* Tablet version */

@media (max-width: 1200px) {
  body {
    width: 100%;
  }
  
  .header {
    padding-top: 43px;
    background-image: url(../images/banner-bg-tablet.jpg);
  }

  .header_top {
    padding: 0 4.5%;
  }
  
  .header_title {
    margin: 0 auto;
    max-width: 650px;
    font-size: 40px;
    line-height: 1.4;
    padding: 85px 0 110px;
  }

  .header_logo_image {
    width: 160px;
  }
  
  .nav {
    display: none;
  }
  
  .menu__button {
    display: block;
    width: 0.9em;
    height: 0.7em;
    border: none;
    padding: 0;
    background-color: transparent;
    font-size: 25px;
    position: relative;
    text-indent: -9999px;
    cursor: pointer;
    z-index: 5;
  }
  
  .menu__button::before, .menu__button:after {
    content:"";
    width: 100%;
    height: 15%;
    background-color: #ffffff;  
    position: absolute;
    left: 0;
  }
  
  .menu__button::before {
    top: 0;
  }
  
  .menu__button:after {
    bottom: 0;
  }
  
  .menu__button_label {
    width: 100%;
    height: 15%;
    margin-top: -5%;  
    background-color: #ffffff;  
    position: absolute;
    left: 0;
    top: 50%;
  }

  .trends_header {
    font-size: 18px;
    margin: 46px auto 5px;
  }

  .trends_post {
    width: calc(50% - 2px);
    height: 245px;
    margin-bottom: 4px;
  }

  .trends_image {
    object-position: bottom;
  }

  .trends_caption {
    font-size: 17px;
  }

  .main {
    padding: 49px 35px 33px;
  }

  .main_block_news {
    margin-bottom: 38px;
  }

  .main_block_news::after {
    content: "";
    display: block;
    background-color: #eeeeee;
    height: 3px;
    width: 100%;
    margin: 5px auto;
  }

  .main_block_news:last-child::after {
    display: none;
  }

  .news_image {
    max-width: unset;
    width: 100%;
    min-height: 294px;
    height: unset;
    max-height: 400px;
    margin-right: 0;
  }
  
  .news_right {
    width: 100%;
    margin: 12px 0 0;
    padding-left: 0;
  }

  .news_tags {
    margin: 0;
  }

  .news_caption {
    font-size: 17px;
    line-height: 21px;
    margin-top: 10px;
  }

  .news_info {
    margin: 17px 0 25px;
  }

  .offer {
    margin: 0 auto 20px;
  }

  .offer_header {
    font-size: 18px;
  }

  .offer_posts {
    margin: 0 3%;
  }

  .offer_post {
    width: 48%;
    margin-bottom: 30px;
  }

  .offer_image {
    width: 292px;
    height: 227px;
  }

  .offer_post_title {
    font-size: 17px;
  }

  .offer_post_info {
    width: 292px;
  }

  .footer {
    margin: 0 34px;
  }

  .popup_form {
    height: 596px;
  }

  .popup_header {
    font-size: 18px;
    margin-bottom: -3px;
  }

  .popup_text {
    margin: 14px 0 7px;
  }

  .popup_checkbox_text {
    margin-right: 28px;
    font-size: 14px;
  }

  .popup_checkbox_text::before {
    width: 25px;
    height: 25px;
    background-size: 25px;
  }

  .popup_close {
    font-size: 24px;
    top: -34px;
    right: 3px;
  }

  .popup_close::before, .popup_close:after {
    width: 34px;
    height: 4px;
  }

  .copyrate {
    margin: 43px auto 40px;
  }
}

@media (max-width: 1200px) and (orientation: landscape) {
  .trends_post {
    width: calc(25% - 3px);
    margin-bottom: 5px;
  }

  .trends_tags_link {
    font-size: 12px;
  }

  .trends_caption {
    font-size: 15px;
  }
}
/* ... */

